hphp/hack/test/typecheck/try_catch_bad1.php.exp
File "try_catch_bad1.php", line 24, characters 10-11:
Invalid return type (Typing[4110])
File "try_catch_bad1.php", line 13, characters 17-19:
Expected int
File "try_catch_bad1.php", line 20, characters 10-15:
But got string
